src/assets/styles.css
/* Self hosted fonts */
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400; /* Regular */
  font-display: swap;
  src: url("/fonts/inter-400.woff2") format("woff2");
}

@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 700; /* Bold */
  font-display: swap;
  src: url("/fonts/inter-700.woff2") format("woff2");
}

@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 900; /* Black/Heavy */
  font-display: swap;
  src: url("/fonts/inter-900.woff2") format("woff2");
}

@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  /* Font families */
  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: "Courier New", monospace;

  /* Theme */
  --bg-light: #ffffff; /* slate-50 */
  --bg-dark: #1a1a1a; /* slate-900 */
  --text-color-light: #213547; /* slate-800 */
  --text-color-dark: #d1d5db; /* slate-200 */
  --pattern-color-light: #2135472d; /* slate-800 with 0.18 opacity */
  --pattern-color-dark: #d1d5db0c; /* slate-200 with 0.05 opacity */
  --green-accent-light: #15803d; /* green-700 */
  --green-accent-dark: #7bf1a8; /* green-300 */
}

@layer base {
  html {
    scrollbar-gutter: stable; /* reserve scrollbar space to prevent layout shifts */
  }

  body {
    color: var(--text-color-light);
    background-color: var(--bg-light);
  }

  .dark body {
    color: var(--text-color-dark);
    background-color: var(--bg-dark);
  }
}

@layer components {
  .nav-link {
    @apply flex flex-col justify-center items-center w-full py-2 cursor-pointer;
  }

  .text-hover {
    @apply dark:hover:text-green-300 hover:text-green-700 transition-colors duration-300 ease-in-out;
  }

  /* border-color (same as tiny in utility) but there is bg (1px divs as devider lines)*/
  .border-color {
    @apply border-slate-400 dark:border-slate-600;
  }
}

@layer utilities {
  .flex-center {
    @apply flex justify-center items-center;
  }

  /* tiny text and border color (1px divs as divider lines) */
  .tiny-border {
    @apply bg-slate-400 dark:bg-slate-600;
  }

  .text-tiny {
    @apply text-[0.6rem] leading-[0.5rem] font-mono dark:text-green-300 text-green-700;
  }

  .rotate-270 {
    transform: rotate(deg);
  }

  .text-orientation {
    writing-mode: vertical-rl; /* Text flows top to bottom, right to left */
    text-orientation: upright; /* Letters remain horizontal */
    letter-spacing: -2px; /* Adjust letter spacing for better readability */
  }
  @media (min-width: 640px) {
    .text-orientation {
      writing-mode: horizontal-tb; /* Text flows left to right */
      text-orientation: mixed; /* Letters remain horizontal */
      letter-spacing: 0.4px;
    }
  }

  .text-upright {
    writing-mode: vertical-rl; /* Text flows top to bottom, right to left */
    text-orientation: upright; /* Letters remain horizontal */
    letter-spacing: -2px;
  }

  /* Adjust padding for to the visablity of pattern label above @media below overwrites */
  .margin950 {
    margin: 1.5rem 1rem;
  }

  /* custom global scrollbar */
  *::-webkit-scrollbar {
    width: 6px;
  }
  *::-webkit-scrollbar-track {
    background: transparent;
  }
  *::-webkit-scrollbar-thumb {
    background-color: #64ad7cc4;
    border-radius: 4px;
    border: 2px solid transparent;
  }
  * {
    scrollbar-width: thin; /* Firefox */
    scrollbar-color: #64ad7cc4 transparent; /* thumb and track */
  }

  /* fading animation */
  .fade-enter-from {
    @apply opacity-0 translate-y-2;
  }
  .fade-enter-to {
    @apply opacity-100 translate-y-0;
  }
  .fade-enter-active {
    @apply transition duration-200 ease-out;
  }
  .fade-leave-from {
    @apply opacity-100 translate-y-0;
  }
  .fade-leave-to {
    @apply opacity-0 translate-y-2;
  }
  .fade-leave-active {
    @apply transition duration-150 ease-in;
  }
}
/* Hide buffer label on smaller screens */
@media (max-width: 1419px) {
  .hide-under-1420 {
    display: none !important;
  }
}

/* Hide pattern label on small screens */
@media (max-width: 949px) {
  .hide-under-950 {
    display: none !important;
  }
}

/* Adjust padding for to the visablity of pattern label above */
@media (max-width: 949px) {
  .margin950 {
    margin: 1rem;
  }
}

/* Adjust padding for to the visablity of pattern label above */
@media (max-width: 639px) {
  .margin950 {
    margin: 0 1rem;
  }
}

/* Navbar setup so no overlap on content */
@media (min-width: 640px) {
  body {
    padding-bottom: 0;
    padding-left: 76px; /* 75px is the width of the navbar */
  }
}

